--- a/index.html
+++ b/index.html
@@ -13,32 +13,32 @@
         <h1 class="header__title">ohmyfood</h1>
     </header>
 
-    <section class="menus">
+    <section class="cards-list">
         <a class="card card__enchantee" href="./pages/la-note-enchantee.html">
-            <h2> <img src="./img/music-logo.png" alt=""><br>
-                <span class="menus__enchantee--name">La note enchantée</span>
-                <span class="menus__enchantee--menu">Menu</span>
+            <h2> 
+                <img src="./img/music-logo.png" alt="note-logo"><br>
+                <span class="card__enchantee--name">La note enchantée</span>
+                <span class="card__enchantee--menu">Menu</span>
             </h2>
         </a>
         <a class="card card__francaise" href="./pages/le-chic-a-la-francaise.html">
             <h2>
-                <span class="menus__francaise--name">Le chic à la Française </span>
-                <span class="menus__francaise--menu">Menu</span>
+                <span class="card__francaise--name">Le chic à la Française </span>
+                <span class="card__francaise--menu">Menu</span>
             </h2>
         </a>
         <a class="card card__papilles" href="./pages/le-delice-des-papilles.html">
             <h2>
-                <span class="menus__papilles--name">Le délice des papilles</span>
-                <span class="menus__papilles--menu">Menu</span>
+                <span class="card__papilles--name">Le délice des papilles</span>
+                <span class="card__papilles--menu">Menu</span>
             </h2>
         </a>
         <a class="card card__gout" href="./pages/la-palette-du-gout.html">
             <h2>
-                <span class="menus__gout--name">La palette du goût</span>
-                <span class="menus__gout--menu">Menu</span>
+                <span class="card__gout--name">La palette du goût</span>
+                <span class="card__gout--menu">Menu</span>
             </h2>
         </a>
-
     </section>
 
     <section class="soon">
