--- a/pages/la-note-enchantee.html
+++ b/pages/la-note-enchantee.html
@@ -11,11 +11,11 @@
         <h1 class="header__title"><a href="../index.html">ohmyfood</a></h1>
     </header>
 
-    <section class="menu-page menu-page__enchantee">
+    <section class="card-page card__enchantee">
 
         <header>
             <img src="../img/music-logo.png" alt="note-logo"><br>
-            <h2 class="menus__enchantee--name">La note enchantée</h2>
+            <h2 class="card__enchantee--name">La note enchantée</h2>
         </header>
 
         <section class="entree entree--ench">
@@ -67,9 +67,9 @@
             </ul>
         </section>
 
-        <section class="menu-page__footer">
+        <section class="card-page__footer">
             <img src="../img/music-logo.png" alt="note-logo"> 
-            <span class="menus__enchantee--name">La note enchantée</span>
+            <span class="card__enchantee--name">La note enchantée</span>
         </section>
 
     </section>
