--- a/pages/la-palette-du-gout.html
+++ b/pages/la-palette-du-gout.html
@@ -11,10 +11,10 @@
         <h1 class="header__title"><a href="../index.html">ohmyfood</a></h1>
     </header>
 
-    <section class="menu-page menu-page__gout">
+    <section class="card-page card__gout">
 
         <header>
-            <h2 class="menus__gout--name">La palette du goût</h2>
+            <h2 class="card__gout--name">La palette du goût</h2>
         </header>
 
         <section class="entree">
