--- a/pages/le-chic-a-la-francaise.html
+++ b/pages/le-chic-a-la-francaise.html
@@ -7,15 +7,14 @@
     <title>ohmyfood - Le chic à la française</title>
 </head>
 <body>
-    <div class="container">
         <header class="header">
             <h1 class="header__title"><a href="../index.html">ohmyfood</a></h1>
         </header>
 
-        <section class="menu-page menu-page__francaise">
+        <section class="card-page card__francaise">
 
             <header>
-                <h2 class="menus__francaise--name">Le chic à la française</h2>
+                <h2 class="card__francaise--name">Le chic à la française</h2>
             </header>
 
             <section class="entree">
@@ -74,6 +73,5 @@
                 <li class="footer__contact"><a href="mailto:contact@ohmyfood.com">Contactez-nous</a></li>
             </ul>
         </footer>
-    </div>
 </body>
 </html>
