--- a/pages/le-delice-des-papilles.html
+++ b/pages/le-delice-des-papilles.html
@@ -11,10 +11,10 @@
         <h1 class="header__title"><a href="../index.html">ohmyfood</a></h1>
     </header>
 
-    <section class="menu-page menu-page__papilles">
+    <section class="card-page card__papilles">
 
         <header>
-            <h2 class="menus__papilles--name">Le délice des papilles</h2>
+            <h2 class="card__papilles--name">Le délice des papilles</h2>
         </header>
 
         <section class="entree">
